<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Changeable</string>
    <string name="nav_header_subtitle">Go to settings</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt" translatable="false">Firebase UID: %s</string>
    <string name="firebase_user_management" translatable="false">Firebase User Management</string>
    <string name="emailpassword_status_fmt" translatable="false">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>

    <string name="menu_calculator">Calculator</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_music">Music Player</string>
    <string name="menu_sensor">Sensors</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_recorder">Recorder</string>
    <string name="menu_stories">Stories</string>
    <string name="menu_web">Web Info</string>

    <string name="calculator_0" translatable="false">0</string>
    <string name="calculator_1" translatable="false">1</string>
    <string name="calculator_2" translatable="false">2</string>
    <string name="calculator_3" translatable="false">3</string>
    <string name="calculator_4" translatable="false">4</string>
    <string name="calculator_5" translatable="false">5</string>
    <string name="calculator_6" translatable="false">6</string>
    <string name="calculator_7" translatable="false">7</string>
    <string name="calculator_8" translatable="false">8</string>
    <string name="calculator_9" translatable="false">9</string>

    <string name="calculator_dot" translatable="false">.</string>
    <string name="calculator_plus" translatable="false">+</string>
    <string name="calculator_minus" translatable="false">-</string>
    <string name="calculator_multiply" translatable="false">X</string>
    <string name="calculator_divide" translatable="false">/</string>
    <string name="calculator_equals" translatable="false">=</string>
    <string name="calculator_clean" translatable="false">C</string>

    <string name="browser_button">Go</string>
    <string name="browser_back">Back</string>
    <string name="browser_forward">Forward</string>

    <string name="sensor_pressure">Pressure:</string>
    <string name="sensor_light">Light:</string>
    <string name="sensor_magnetic_field">Magnetic field:</string>

    <string name="camera_take_photo">Take a photo</string>
    <string name="camera_save">Save</string>

    <string name="recorder_start">Start Recording</string>
    <string name="recorder_stop">Stop Recording</string>
    <string name="recorder_play">Play</string>
    <string name="recorder_stop_playing">Stop</string>

    <string name="settings_name">Name</string>
    <string name="settings_name_placeholder">Enter name</string>
    <string name="settings_group">Group</string>
    <string name="settings_group_placeholder">Enter group</string>
    <string name="settings_button">Save</string>

    <string name="story_add_title">Story adding</string>
    <string name="story_subject_name">Subject</string>
    <string name="story_text_name">Text</string>
    <string name="story_add_subject_placeholder">Enter Subject</string>
    <string name="story_add_text_placeholder">Enter text</string>
    <string name="story_add_ok">Add</string>
    <string name="story_add_cancel">Cancel</string>

    <string name="web_info_no_internet">No Internet</string>
    <string name="web_info_downloading">Downloading…</string>
    <string name="web_info_bitcoin" translatable="false">Bitcoin</string>

    <string name="photo_title">Photos</string>
    <string name="photo_camera_no_access">No access to camera!</string>

    <string name="maps_title">Maps</string>
    <string name="maps_close_dialog">Close</string>
    <string name="maps_establishment">Establishment</string>
    <string name="maps_coordinates">Coordinates</string>
    <string name="maps_address">Address</string>
    <string name="maps_build_route">Build a route</string>
    <string name="maps_confirm">Build</string>
    <string name="maps_build_route_description">Build a route from home to university</string>
    <string name="maps_build_route_destination">Destination</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>