<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu_calculator"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_menu_browser"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_menu_music"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_menu_sensor"
            android:title="@string/menu_sensor" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_recorder"
            android:icon="@drawable/ic_menu_recorder"
            android:title="@string/menu_recorder" />
        <item
            android:id="@+id/nav_stories"
            android:icon="@drawable/ic_menu_stories"
            android:title="@string/menu_stories" />
        <item
            android:id="@+id/nav_bitcoin"
            android:icon="@drawable/ic_menu_bitcoin"
            android:title="@string/web_info_bitcoin" />
    </group>
</menu>