<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_calculator">

    <fragment
        android:id="@+id/nav_calculator"
        android:name="ru.mirea.lugovoy.mireaproject.ui.calculator.CalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.lugovoy.mireaproject.ui.browser.BrowserFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_browser" />
    <fragment
        android:id="@+id/nav_music"
        android:name="ru.mirea.lugovoy.mireaproject.ui.music.MusicFragment"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_music" />
    <fragment
        android:id="@+id/nav_sensors"
        android:name="ru.mirea.lugovoy.mireaproject.ui.sensors.SensorsFragment"
        android:label="@string/menu_sensor"
        tools:layout="@layout/fragment_sensor" />
    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.lugovoy.mireaproject.ui.camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/nav_recorder"
        android:name="ru.mirea.lugovoy.mireaproject.ui.recorder.RecorderFragment"
        android:label="@string/menu_recorder"
        tools:layout="@layout/fragment_recorder" />
    <fragment
        android:id="@+id/nav_stories"
        android:name="ru.mirea.lugovoy.mireaproject.ui.stories.StoriesFragment"
        android:label="@string/menu_stories"
        tools:layout="@layout/fragment_stories" />
    <fragment
        android:id="@+id/nav_bitcoin"
        android:name="ru.mirea.lugovoy.mireaproject.ui.bitcoin.BitcoinFragment"
        android:label="@string/web_info_bitcoin"
        tools:layout="@layout/fragment_bitcoin" />
    <fragment
        android:id="@+id/nav_photo"
        android:name="ru.mirea.lugovoy.mireaproject.ui.photo.PhotoFragment"
        android:label="@string/photo_title"
        tools:layout="@layout/fragment_photo" />
    <fragment
        android:id="@+id/nav_maps"
        android:name="ru.mirea.lugovoy.mireaproject.ui.maps.MapsFragment"
        android:label="@string/maps_title"
        tools:layout="@layout/fragment_maps" />
</navigation>