<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.calculator.CalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewPrevious"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:textAlignment="textEnd"
                android:textSize="30sp"
                tools:text="Previous" />

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:textAlignment="textEnd"
                android:textSize="60sp"
                tools:text="Result" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSeven"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_7"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />

                <Button
                    android:id="@+id/buttonEight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_8"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />

                <Button
                    android:id="@+id/buttonNine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_9"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />

                <Button
                    android:id="@+id/buttonPlus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_plus"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonFour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_4"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />

                <Button
                    android:id="@+id/buttonFive"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_5"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />

                <Button
                    android:id="@+id/buttonSix"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_6"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />

                <Button
                    android:id="@+id/buttonMinus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_minus"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_1"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />

                <Button
                    android:id="@+id/buttonTwo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_2"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />

                <Button
                    android:id="@+id/buttonThree"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_3"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />

                <Button
                    android:id="@+id/buttonMultiply"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_multiply"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonClean"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_clean"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />

                <Button
                    android:id="@+id/buttonZero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_0"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />

                <Button
                    android:id="@+id/buttonDot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_dot"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />

                <Button
                    android:id="@+id/buttonDivide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/calculator_divide"
                    android:textSize="34sp"
                    app:cornerRadius="32dp" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonEquals"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:text="@string/calculator_equals"
                android:textSize="34sp"
                app:cornerRadius="32dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>